Fixing issue with displaying on iphones.

--- a/client/src/styles/Profile.scss
+++ b/client/src/styles/Profile.scss
@@ -572,6 +572,176 @@ $phone:480px;
                 display: none;
             }
         }
+
+        @media only screen and (max-width: 960px) and (-webkit-min-device-pixel-ratio: 2) {
+            width: 100%;
+            flex-direction: column;
+            margin-top: 1rem;
+            padding-top: 1rem;    
+            border-top: 1px solid $spotify-green;
+
+            .header-for-top-lists{
+                justify-content: center;
+            }
+
+            .choice-container {
+                height: 30px;
+                width: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: row;
+                margin-top: 1rem;
+
+                .top-songs-button {
+                    width: 50%;
+                    text-align: center;
+
+                    button {
+                        background-color: transparent;
+                        border: none;
+                        
+                        h1 {
+                            font-family: 'Barlow', sans-serif;
+                            font-size: 1.6rem;
+                            font-weight: 600;
+                            color: $light-grey;
+                        }
+                        
+                        :hover {
+                            cursor: pointer;
+                            color: $spotify-green-brighter;
+                        }
+                    }
+                }
+
+                .top-artist-button {
+                    width: 50%;
+                    text-align: center;
+
+                    button {
+                        background-color: transparent;
+                        border: none;
+                        
+                        h1 {
+                            font-family: 'Barlow', sans-serif;
+                            font-size: 1.6rem;
+                            font-weight: 600;
+                            color: $white;
+                        }
+
+                        :hover {
+                            cursor: pointer;
+                            color: $spotify-green-brighter;
+                        }
+                    }
+                }
+            }
+
+            .header-for-top-lists {
+                height: 30px;
+                width: 100%;
+                align-items: center;
+    
+                .ranges {
+                    button {
+                        span {
+                            font-size: 1.2rem;
+                        }
+                    }
+                }
+            }
+
+            .top-songs {
+                width: 90%;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                align-self: center;
+                margin-top: 1.5rem;
+    
+                h1 {
+                    font-size: 20px;
+                    font-weight: 600;
+                }
+    
+                .songs {
+                    height: 40%;
+                    margin-top: 0rem;
+    
+                    li {
+                        margin: 1.8rem 0rem;
+    
+                        .album-cover {
+                            margin-right: 1rem;
+                        }
+    
+                        .title-and-artist {
+
+                            .song-title {
+                                font-size: 1.6rem;
+                            }
+                        }
+                    }
+    
+                }
+            }
+
+            .top-artists {
+                position: absolute;
+                top: 40rem;
+                width: 90%;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                align-self: center;
+                margin-top: 0.5rem;
+    
+                h1 {
+                    font-size: 20px;
+                    font-weight: 600;
+                }
+    
+                .artists {
+                    height: 40%;
+                    margin-top: 0rem;
+    
+                    li {
+                        margin: 1.8rem 0rem;
+
+                        .avatar-and-name {
+
+                            .artist-name {
+                                h1 {
+                                    font-size: 1.6rem;
+                                }
+                            }
+                        }
+
+                        .popularity {
+                            h1 {
+                                font-size: 1.2rem;
+
+                                span {
+                                    font-size: 1.2rem;
+                                    font-weight: 500;
+                                }
+                            }
+                        }
+                    }
+    
+                }
+            }
+
+            .top-songs[value=hide] {
+                display: none;
+            }
+
+            .top-artists[value=hide] {
+                display: none;
+            }
+        }
+        
     }
 
     @media screen and (max-width:1000px) {
